# tchecker

./: .clang-format  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  HOWTO.md  INSTALL.md  LICENSE  README.md
include/: CMakeLists.txt
include/tchecker/: basictypes.hh  config.hh.in
src/: CMakeLists.txt  basictypes.cc
src/algorithms/: CMakeLists.txt  search_order.cc  stats.cc
src/async_zg/: CMakeLists.txt  async_zg_ta.cc
src/clockbounds/: CMakeLists.txt  clockbounds.cc  solver.cc
src/dbm/: CMakeLists.txt  db.cc  dbm.cc  offset_dbm.cc  refdbm.cc
src/expression/: CMakeLists.txt  expression.cc  static_analysis.cc  type_inference.cc  typechecking.cc  typed_expression.cc
src/flat_system/: CMakeLists.txt
src/fsm/: CMakeLists.txt  fsm.cc  state.cc  system.cc  transition.cc
src/graph/: CMakeLists.txt  cover_graph.cc  edge.cc  node.cc  output.cc
src/parsing/: CMakeLists.txt  declaration.cc
src/refzg/: CMakeLists.txt  path.cc  refzg.cc  semantics.cc  state.cc  transition.cc  zone.cc
src/statement/: CMakeLists.txt  clock_updates.cc  statement.cc  static_analysis.cc  type_inference.cc  typechecking.cc  typed_statement.cc
src/syncprod/: CMakeLists.txt  edges_iterators.cc  label.cc  state.cc  syncprod.cc  system.cc  transition.cc  vedge.cc  vloc.cc
src/system/: CMakeLists.txt  attribute.cc  clock.cc  edge.cc  event.cc  intvar.cc  loc.cc  output.cc  process.cc  static_analysis.cc  synchronization.cc  system.cc
src/ta/: CMakeLists.txt  label.cc  state.cc  static_analysis.cc  system.cc  ta.cc  transition.cc
src/tchecker/: tchecker.cc
src/tck-liveness/: counter_example.hh  tck-liveness.cc  zg-couvscc.cc  zg-couvscc.hh  zg-ndfs.cc  zg-ndfs.hh
src/tck-reach/: concur19.cc  concur19.hh  counter_example-Ocan.cc  counter_example-Ocan.hh  counter_example.hh  tck-reach.cc  zg-aLU-covreach.cc  zg-aLU-covreach.hh  zg-covreach.cc  zg-covreach.hh  zg-reach.cc  zg-reach.hh
src/tck-simulate/: display.cc  display.hh  graph.cc  graph.hh  simulate.cc  simulate.hh  tck-simulate.cc
src/tck-syntax/: syntax-check.cc  syntax-check.hh  tck-syntax.cc
src/ts/: CMakeLists.txt
src/utils/: CMakeLists.txt  bitset.cc  gc.cc  hashtable.cc  iterator.cc  log.cc  string.cc
src/variables/: CMakeLists.txt  access.cc  clocks.cc  intvars.cc  offset_clocks.cc  static_analysis.cc  variables.cc
src/vm/: CMakeLists.txt  compilers.cc  variables.cc  vm.cc
src/waiting/: CMakeLists.txt  waiting.cc
src/zg/: CMakeLists.txt  extrapolation.cc  path.cc  semantics.cc  state.cc  transition.cc  zg.cc  zg_ta.cc  zone.cc
src/zone/: CMakeLists.txt
test/: CMakeLists.txt  README.md  TestUtils.cmake  save-results.sh  tck-reach.sh  test-db.hh  test-dbm.hh  test-driver.sh  test-extract_variables.hh  test-guard_weak_sync.hh  test-model.hh  test-offset_dbm.hh  test-variables-access.hh  test_resets.hh  unittest.cc  utils.hh
test/algos/: CMakeLists.txt  tck-reach-ad94.out-expected  tck-reach-ad94_Long.out-expected  tck-reach-ad94_Long_concur19_bfs.out-expected  tck-reach-ad94_Long_concur19_dfs.out-expected  tck-reach-ad94_Long_covreach_bfs.out-expected  tck-reach-ad94_Long_covreach_dfs.out-expected  tck-reach-ad94_Long_reach_bfs.out-expected  tck-reach-ad94_Long_reach_dfs.out-expected  tck-reach-ad94_concur19_bfs.out-expected  tck-reach-ad94_concur19_dfs.out-expected  tck-reach-ad94_covreach_bfs.out-expected  tck-reach-ad94_covreach_dfs.out-expected  tck-reach-ad94_mid.out-expected  tck-reach-ad94_mid_concur19_bfs.out-expected  tck-reach-ad94_mid_concur19_dfs.out-expected  tck-reach-ad94_mid_covreach_bfs.out-expected  tck-reach-ad94_mid_covreach_dfs.out-expected  tck-reach-ad94_mid_reach_bfs.out-expected  tck-reach-ad94_mid_reach_dfs.out-expected  tck-reach-ad94_reach_bfs.out-expected  tck-reach-ad94_reach_dfs.out-expected  tck-reach-corsso_2_2_10_1_2.out-expected  tck-reach-corsso_2_2_10_1_2_concur19_bfs.out-expected  tck-reach-corsso_2_2_10_1_2_concur19_dfs.out-expected  tck-reach-corsso_2_2_10_1_2_covreach_bfs.out-expected  tck-reach-corsso_2_2_10_1_2_covreach_dfs.out-expected  tck-reach-corsso_2_2_10_1_2_reach_bfs.out-expected  tck-reach-corsso_2_2_10_1_2_reach_dfs.out-expected  tck-reach-critical-region-async_2_10.out-expected  tck-reach-critical-region-async_2_10_concur19_bfs.out-expected  tck-reach-critical-region-async_2_10_concur19_dfs.out-expected  tck-reach-critical-region-async_2_10_covreach_bfs.out-expected  tck-reach-critical-region-async_2_10_covreach_dfs.out-expected  tck-reach-critical-region-async_2_10_reach_bfs.out-expected  tck-reach-critical-region-async_2_10_reach_dfs.out-expected  tck-reach-csmacd_3.out-expected  tck-reach-csmacd_3_concur19_bfs.out-expected  tck-reach-csmacd_3_concur19_dfs.out-expected  tck-reach-csmacd_3_covreach_bfs.out-expected  (+45 more)
test/bugfixes/: CMakeLists.txt  bug-002.out-expected  bug-002.tck  bug-003a.out-expected  bug-003a.tck  bug-003b.out-expected  bug-003b.tck  bug-004.err-expected  bug-004.sh  bug-005a.out-expected  bug-005a.sh  bug-005b.out-expected  bug-005b.sh  bug-005c.out-expected  bug-005c.sh  bug-007.cc  bug-007.out-expected  bug-008a.out-expected  bug-008a.sh  bug-008b.sh  bug-009.out-expected  bug-009.tck  bug-041.out-expected  bug-041.sh  bug-045.out-expected  bug-045.tck  bug-046.err-expected  bug-046.tck  bug-052.out-expected  bug-052.tck  fischer_2.txt  memleak-01.err-expected  memleak-01.tck
test/covreach/: CMakeLists.txt  covreach-ad94_Long_aLUg_zg_elapsed_extraLU+g_dfs_dot.out-expected  covreach-ad94_Long_aLUg_zg_elapsed_extraLU+l_dfs_dot.out-expected  covreach-ad94_Long_aLUg_zg_elapsed_extraM+g_bfs_dot.out-expected  covreach-ad94_Long_aLUg_zg_non-elapsed_extraLUg_bfs_dot.out-expected  covreach-ad94_Long_aLUg_zg_non-elapsed_extraLUg_dfs_dot.out-expected  covreach-ad94_Long_aLUg_zg_non-elapsed_extraLUl_dfs_dot.out-expected  covreach-ad94_Long_aLUl_zg_non-elapsed_extraLUl_bfs_dot.out-expected  covreach-ad94_Long_aLUl_zg_non-elapsed_extraM+l_bfs_dot.out-expected  covreach-ad94_Long_aMg_zg_elapsed_extraLU+l_bfs_dot.out-expected  covreach-ad94_Long_aMg_zg_elapsed_extraM+l_dfs_dot.out-expected  covreach-ad94_mid.out-expected  (+1223 more)
(+946 files in other folders)
